# python-template

./: .pre-commit-config.yaml  AGENTS.md  README.md  pyproject.toml  requirements-dev.in  requirements-dev.txt  requirements.txt
.github/workflows/: python_latest_linux.yml
knowledge_base/: README.md  kb_article_template.md  list_kb.py
python_template/utils/: loggable.py  utils.py
python_template/utils/scripts/: generate_requirements_txt.py
tests/: conftest.py  test_utils.py
