[build-system]
requires = ["uv_build>=0.9.25,<0.10.0"]
build-backend = "uv_build"

[project]
name = "python-template"
version = "0.1.0"
description = "Python template project"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "python-dotenv>=1.0.1",
]

[project.scripts]
python-template = "python_template.__main__:main"

[tool.uv.build-backend]
module-root = ""

[tool.ruff]
show-fixes = true
target-version = "py313"

[tool.ruff.lint]
select = [
    # pycodestyle
    "E",
    # Pyflakes
    "F",
    # pyupgrade
    "UP",
    # flake8-bugbear
    "B",
    # flake8-simplify
    "SIM",
    # isort
    "I",
]
ignore = [
    "E501",  # line too long
    "B008",  # do not perform calls in argument defaults
]

[tool.pytest.ini_options]
addopts = "--html=logs/report.html --self-contained-html"
testpaths = ["tests"]
log_cli = "True"
log_cli_level = "INFO"
log_cli_format = "[%(asctime)s] [%(levelname)s] %(message)s"
log_cli_date_format = "%Y-%m-%d %H:%M:%S"
log_file = "./logs/pytest.log"

[dependency-groups]
dev = [
    "pre-commit>=4.1.0",
    "pytest>=8.3.0",
    "pytest-cov>=6.0.0",
    "pytest-html>=4.1.1",
    "ruff>=0.12.0",
]
